# uk-bike-rental-analysis

./: .gitignore  Dockerfile  download_full_set.py  listoflinks.txt  main.py  overview.ipynb  prefect.yaml  pyproject.toml  queries.txt  readme.md  requirements.txt
.devcontainer/: devcontainer.json  dockerfile
.github/workflows/: deploy-prefect-flow.yaml
terraform-resources/: .terraform.lock.hcl  base_job_template.json  main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
